force-app/main/default/objects/Index_Future__c/Index_Future__c.object-meta.xml
<CustomObject>
    <label>Index Future</label>
    <nameField>
        <label>Index Future Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Index Futures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>