force-app/main/default/objects/Index_Future__c/fields/Ask__c.field-meta.xml
<CustomField>
    <fullName>Ask__c</fullName>
    <label>Ask</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>