force-app/main/default/objects/Index_Future__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <label>Bid</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>