force-app/main/default/objects/Index_Future__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <description>How much has it moved today?</description>
    <inlineHelpText>How much has it moved today?</inlineHelpText>
    <label>Change</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>