force-app/main/default/objects/Index_Future__c/fields/Daily_Change__c.field-meta.xml
<CustomField>
    <fullName>Daily_Change__c</fullName>
    <formula>IF (   OR(ISBLANK( Price__c), 
          ISBLANK( Index_Settlement__r.Close__c)
       ), 
       NULL, 
       Price__c -  Index_Settlement__r.Close__c
)</formula>
    <label>Daily Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>