force-app/main/default/objects/Index_Future__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>What month is this for delivery (For example, 5/1/2014 mean May 2014 delivery)</description>
    <inlineHelpText>What month is this for delivery (For example, 5/1/2014 mean May 2014 delivery)</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>