force-app/main/default/objects/Index_Future__c/fields/Delivery_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Formula__c</fullName>
    <formula>Delivery_Date__c</formula>
    <label>Delivery Date Formula</label>
    <type>Date</type>
</CustomField>