force-app/main/default/objects/Index_Future__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>What is the last day of trading for this contract?</description>
    <inlineHelpText>What is the last day of trading for this contract?</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>