force-app/main/default/objects/Index_Future__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Index Futures</relationshipLabel>
    <relationshipName>Index_Futures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>