force-app/main/default/objects/Index_Future__c/fields/Index_Cost__c.field-meta.xml
<CustomField>
    <fullName>Index_Cost__c</fullName>
    <formula>Index__r.Index_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>