force-app/main/default/objects/Index_Future__c/fields/Index_Future_Name_Key__c.field-meta.xml
<CustomField>
    <fullName>Index_Future_Name_Key__c</fullName>
    <externalId>true</externalId>
    <label>Index Future Name Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>