force-app/main/default/objects/Index_Future__c/fields/Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Index_Name__c</fullName>
    <formula>Index__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Name</label>
    <type>Text</type>
</CustomField>