force-app/main/default/objects/Index_Future__c/fields/Index_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Index_Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Index Settlement</label>
    <referenceTo>Index_Settlement__c</referenceTo>
    <relationshipLabel>Index Futures</relationshipLabel>
    <relationshipName>Index_Futures</relationshipName>
    <type>Lookup</type>
</CustomField>