force-app/main/default/objects/Index_Future__c/fields/Last__c.field-meta.xml
<CustomField>
    <fullName>Last__c</fullName>
    <label>Last</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>