force-app/main/default/objects/Index_Future__c/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Low</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>