force-app/main/default/objects/Index_Future__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Index_Name__c</columns>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <columns>Change__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>